added some text, did some grammer checks

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -53,3 +53,13 @@
 	url = {https://zenodo.org/record/7740560},
 	langid = {en}
 }
+
+@article{oke2017,
+	title = {Urban Climates},
+	author = {Oke, T. R. and Mills, G. and Christen, A. and Voogt, J. A.},
+	year = {2017},
+	month = {09},
+	date = {2017-09-14},
+	doi = {10.1017/9781139016476},
+	url = {http://dx.doi.org/10.1017/9781139016476}
+}
